CircleCI config, requirements.

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,9 @@
 <body>
  <title>The Data Incubator</title>
     <form id="img-uploader" action="/upload" method="POST" enctype="multipart/form-data">
-         <h3>Upload an image</h3><br>
-         <input id="img-picker" type="file" name="picture" accept="image/*">
+         <h2>The Data Incubator</h2>
+         <h4>Upload an image</h4><br>
+        <input id="img-picker" type="file" name="picture" accept="image/*"> </form> </br>
          <div id="message"></div>
             <input type="submit">
     </form>
