--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,7 @@
     <form id="img-uploader" action="/upload" method="POST" enctype="multipart/form-data">
          <h2>The Data Incubator</h2>
          <h4>Upload an image</h4><br>
-        <input id="img-picker" type="file" name="picture" accept="image/*"> </form> </br>
-         <div id="message"></div>
+        <input id="img-picker" type="file" name="picture" accept="image/*">  </br>
             <input type="submit">
     </form>
 </body>
